--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-
 # Created by https://www.gitignore.io/api/dotnetcore,aspnetcore
 # Edit at https://www.gitignore.io/?templates=dotnetcore,aspnetcore
 
@@ -281,5 +280,41 @@ __pycache__/
 /node_modules
 /wwwroot/node_modules
 
-
 # End of https://www.gitignore.io/api/dotnetcore,aspnetcore
+
+
+# Created by https://www.gitignore.io/api/angular
+# Edit at https://www.gitignore.io/?templates=angular
+
+### Angular ###
+## Angular ##
+# compiled output
+/dist
+/tmp
+/app/**/*.js
+/app/**/*.js.map
+
+# dependencies
+/node_modules
+/bower_components
+
+# IDEs and editors
+/.idea
+
+# misc
+/.sass-cache
+/connect.lock
+/coverage/*
+/libpeerconnection.log
+npm-debug.log
+testem.log
+/typings
+
+# e2e
+/e2e/*.js
+/e2e/*.map
+
+#System Files
+.DS_Store
+
+# End of https://www.gitignore.io/api/angular
